# boltffi

./: .gitignore  BOLTFFI_TOML_GUIDE.md  BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  RIFF_TOML_SPEC.md  justfile  renovate.json5
boltffi/: Cargo.toml
boltffi/src/: lib.rs
boltffi_ast/: Cargo.toml
boltffi_ast/src/: attribute.rs  callable.rs  callback.rs  class.rs  constant.rs  contract.rs  custom.rs  documentation.rs  enumeration.rs  ids.rs  lib.rs  literal.rs  name.rs  primitive.rs  record.rs  source.rs  stream.rs  type_expr.rs
boltffi_bindgen/: Cargo.toml  askama.toml
boltffi_bindgen/src/: lib.rs
boltffi_bindgen/src/ir/: abi.rs  build.rs  codec.rs  contract.rs  definitions.rs  lower.rs  mod.rs  ops.rs  plan.rs  types.rs
boltffi_bindgen/src/ir/lower/: abi.rs  calls.rs  mod.rs
boltffi_bindgen/src/model/: enumeration.rs  module.rs  record.rs  types.rs
boltffi_bindgen/src/render/c/: emit.rs  lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/csharp/: emit.rs  lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/dart/: emit.rs  lower.rs  mod.rs  names.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/java/: emit.rs  lower.rs  mappings.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/jni/: lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/kotlin/: emit.rs  lower.rs  plan.rs  primitives.rs  templates.rs
boltffi_bindgen/src/render/python/: error.rs  mod.rs  naming.rs  templates.rs  version.rs
boltffi_bindgen/src/render/swift/: emit.rs  lower.rs  plan.rs  templates.rs
boltffi_bindgen/src/render/typescript/: emit.rs  error.rs  lower.rs  mod.rs  plan.rs  templates.rs
boltffi_bindgen/src/scan/: compiler_type_resolution.rs  mod.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: android.rs  build.rs  check.rs  cli.rs  config.rs  error.rs  main.rs  target.rs
boltffi_cli/src/cargo/: args.rs  metadata.rs  mod.rs
boltffi_cli/src/commands/: build.rs  check.rs  doctor.rs  generate.rs  init.rs  pack.rs  verify.rs
boltffi_cli/src/commands/generate/: generator.rs  header.rs  mod.rs
boltffi_cli/src/commands/pack/: all.rs  mod.rs
boltffi_cli/src/pack/: android.rs  mod.rs  spm.rs  xcframework.rs
boltffi_cli/src/pack/android/: link.rs  mod.rs
boltffi_cli/src/pack/apple/: mod.rs  spm.rs  xcframework.rs
boltffi_cli/src/pack/java/: artifact.rs  link.rs  outputs.rs  plan.rs
boltffi_cli/src/pack/python/: layout.rs  mod.rs  plan.rs  wheel.rs
boltffi_cli/src/pack/wasm/: mod.rs  npm.rs
boltffi_cli/src/toolchain/: android.rs  mod.rs  native_host.rs
boltffi_core/: Cargo.toml
boltffi_core/src/: lib.rs  passable.rs  pending.rs  rustfuture.rs  subscription.rs  wasm.rs
boltffi_core/src/passable/: mod.rs  sequence.rs  value.rs  wire.rs
boltffi_core/src/runtime/: continuation.rs  future.rs
boltffi_core/src/types/: buf.rs
boltffi_core/src/wire/: encode.rs  mod.rs
boltffi_core/tests/: wire_records.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: lib.rs  primitive.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: callback_trait.rs  class.rs  custom_types.rs  data.rs  data_types.rs  export.rs  params.rs  returns.rs  util.rs  wire_gen.rs
boltffi_macros/src/data/expansion/: field_attrs.rs  passable.rs  record_impl.rs  wire.rs
boltffi_macros/src/exports/: async_export.rs  extern_export.rs  function.rs  methods.rs
boltffi_macros/src/lowering/params/: value.rs
boltffi_macros/src/lowering/returns/: lower.rs
boltffi_tests/: Cargo.toml
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: async_cancellation.rs  class_ffi.rs
boltffi_verify/: Cargo.toml
boltffi_verify/tests/: integration.rs
examples/demo/: Cargo.toml  README.md  boltffi.benchmark.toml  boltffi.toml  verify-platform-demos.sh
examples/demo/bench_macros/: Cargo.toml
examples/demo/bench_macros/src/: lib.rs
examples/demo/src/: lib.rs  wasm_bench.rs
examples/demo/src/async_fns/: mod.rs
examples/demo/src/bytes/: mod.rs
examples/demo/src/callbacks/: async_traits.rs  closures.rs  sync_traits.rs
examples/demo/src/classes/: constructor_matrix.rs  methods.rs  static_methods.rs  thread_safe.rs  unsafe_single_threaded.rs
examples/demo/src/custom_types/: mod.rs
examples/demo/src/enums/: c_style.rs  complex_variants.rs  data_enum.rs  repr_int.rs
examples/demo/src/options/: complex.rs  primitives.rs
examples/demo/src/primitives/: scalars.rs  strings.rs  vecs.rs
examples/demo/src/records/: blittable.rs  mixed.rs  mod.rs  nested.rs  with_collections.rs  with_strings.rs
examples/demo/src/results/: basic.rs  error_enums.rs
riff/: Cargo.toml
riff/src/: lib.rs
riff_bindgen/: Cargo.toml  askama.toml
riff_bindgen/src/: build.rs  lib.rs
riff_bindgen/src/cheader/: mod.rs
riff_bindgen/src/ir/: abi.rs  build.rs  codec.rs  definitions.rs  lower.rs  mod.rs  ops.rs  types.rs  validate.rs
riff_bindgen/src/kotlin/: call_plan.rs  jni.rs  marshal.rs  mod.rs  names.rs  templates.rs
riff_bindgen/src/model/: callback_trait.rs  class.rs  contract.rs  enum_layout.rs  enumeration.rs  function.rs  method.rs  mod.rs  module.rs  record.rs  stream.rs  types.rs
riff_bindgen/src/render/: mod.rs  naming.rs
riff_bindgen/src/render/jni/: lower.rs  plan.rs
riff_bindgen/src/render/kotlin/: emit.rs  lower.rs  plan.rs  templates.rs
riff_bindgen/src/render/swift/: codec.rs  emit.rs  lower.rs  mod.rs  plan.rs  templates.rs
riff_bindgen/src/scan/: mod.rs
riff_bindgen/src/swift/: conversion.rs  marshal.rs  mod.rs  names.rs  templates.rs
riff_bindgen/src/swift/templates/: stream.rs
riff_bindgen/templates/kotlin/: callback_trait.txt  enum_sealed.txt  function.txt  jni_glue.txt  native.txt  preamble.txt
riff_bindgen/templates/swift/: enum_c_style.txt  enum_data.txt  function.txt  method_async_throwing.txt  method_callback.txt  method_sync.txt  method_throwing.txt  preamble.txt  record.txt
riff_core/: Cargo.toml
riff_core/src/: lib.rs
riff_core/src/types/: buf.rs  error.rs  mod.rs  string.rs
riff_core/src/wire/: blittable.rs  decode.rs  encode.rs
riff_macros/: Cargo.toml
riff_macros/src/: export.rs  lib.rs  returns.rs  safety.rs
(+367 files in other folders)
