[workspace]
resolver = "3"
members = ["riff_core", "riff_macros", "riff_bindgen", "riff_cli", "riff_ffi_rules", "riff_verify"]
exclude = ["bench_demo/rust-riff", "bench_demo/rust-uniffi"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
not_unsafe_ptr_arg_deref = "allow"
missing_safety_doc = "allow"
