[package]
name = "boltffi_bindgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation library for BoltFFI - generates Swift, Kotlin, and TypeScript bindings"
keywords = ["ffi", "codegen", "swift", "kotlin", "typescript"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[dependencies]
boltffi_ffi_rules = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
heck = "0.5"
askama = "0.15"
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
walkdir.workspace = true
indexmap = "2.7"

[dev-dependencies]
insta = "1.46"
rstest.workspace = true

[lints]
workspace = true
