[package]
name = "boltffi_ffi_rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI type rules and transport encoding for BoltFFI"
keywords = ["ffi", "encoding", "transport", "bindings"]
categories = ["development-tools::ffi"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
