[package]
name = "boltffi_tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
boltffi.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros"] }

[dev-dependencies]
boltffi_core.workspace = true

[lints]
workspace = true
