[package]
name = "riff_macros"
version = "0.1.0"
edition = "2024"
authors = ["Ali A. Hilal <me@alihilal.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "printing", "visit"] }
quote = "1"
proc-macro2 = "1"
riff_ffi_rules = { path = "../riff_ffi_rules" }

[lints]
workspace = true
